gitops/generated/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api

spec:
  selector:
    app: api

  ports:
  - name: http
    port: 80
    targetPort: 80

  type: ClusterIP
