gitops/generated/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: api

spec:
  ingressClassName: traefik

  rules:
  - host: api.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: api
            port:
              number: 80
